index con variables

--- a/proyecto1/templates/index.html
+++ b/proyecto1/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% block content %}
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -7,6 +8,9 @@
 		link
 	</head>
 	<body>
-		
+		<h1>Plantilla de Djanto</h1>
+		<h2>{{variable1}}</h2>
+		<h2>{{variable2}}</h2>
 	</body>
+{% endblock content %}
 </html>
