--- a/proyecto1/templates/index.html
+++ b/proyecto1/templates/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 {% block content %}
 <html lang="en">
@@ -14,3 +15,13 @@
 	</body>
 {% endblock content %}
 </html>
+-->
+
+<form method="POST">
+	{% csrf_token %}
+	dato:<input text="text" name="name">
+	<br>
+	<button type="summit">Enviar</button>
+</form>
+<h3>Informacion:</h3>
+<h3>{{% data %}}
