--- a/proyecto1/templates/index.html
+++ b/proyecto1/templates/index.html
@@ -19,9 +19,9 @@
 
 <form method="POST">
 	{% csrf_token %}
-	dato:<input text="text" name="name">
+	Dato:<input text="text" name="name">
 	<br>
-	<button type="summit">Enviar</button>
+	<button type="submmit">Enviar</button>
 </form>
 <h3>Informacion:</h3>
-<h3>{{% data %}}
+<h3>{{data}}
